--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,15 @@
 body {
     padding-top: 4.5rem;
 }
+
+.search-area {
+    padding: 50px 0rem 1.5rem;
+}
+
+.no-right-padding {
+    padding-right: 0 !important;
+}
+
+.no-left-padding {
+    padding-left: 0 !important;
+}
