--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -3,11 +3,25 @@
 </div>
 
 <% if @stock %>
-  <div class="card" style="width: 18rem;">
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Symbol: <%= @stock.ticker %></li>
-      <li class="list-group-item">Name: <%= @stock.name %></li>
-      <li class="list-group-item">Price: <%= @stock.last_price %></li>
-    </ul>
-  </div>
+  <ul class="list-group list-group-horizontal">
+    <li class="list-group-item">Symbol: <%= @stock.ticker %></li>
+    <li class="list-group-item">Name: <%= @stock.name %></li>
+    <li class="list-group-item">Price: <%= @stock.last_price %></li>
+    <% if current_user.can_track_stock?(@stock.ticker) %>
+      <li class="d-flex justify-content-between align-items-center">
+        <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
+                                        class: "btn btn-success", method: :post %>
+    <% else %>
+      <span class="badge bg-primary">
+        You are already tracking
+        <% if !current_user.under_stock_limit? %>
+          10 stocks
+        <% end %>
+        <% if current_user.stock_already_tracked?(@stock.ticker) %>
+          this stock
+        <% end %>
+      </span>
+    <% end %>
+      </li>
+   </ul>
 <% end %>
