Allow first and last names during signup and edit profile

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,6 +14,17 @@
 	<div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
       <% end %>
 
+  <div class="row g-3 mb-3">
+    <div class="col-md-6">
+      <%= f.label :first_name, class: 'form-label' %>
+      <%= f.text_field :first_name, autocomplete: 'first name', class: 'form-control' %>
+    </div>
+    <div class="col-md-6">
+      <%= f.label :last_name, class: 'form-label' %>
+      <%= f.text_field :last_name, autocomplete: 'last name', class: 'form-control' %>
+    </div>
+  </div>
+  
       <div class="mb-3">
 	<%= f.label :current_password, class: 'form-label' %>
 	<%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
