--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,17 @@
 	<%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
       </div>
 
+      <div class="row g-3 mb-3">
+    <div class="col-md-6">
+      <%= f.label :first_name, class: 'form-label' %>
+      <%= f.text_field :first_name, autocomplete: 'first name', class: 'form-control' %>
+    </div>
+    <div class="col-md-6">
+      <%= f.label :last_name, class: 'form-label' %>
+      <%= f.text_field :last_name, autocomplete: 'last name', class: 'form-control' %>
+    </div>
+      </div>
+      
       <div class="row mb-4">
 	<div class="col">
 	  <%= f.label :password, class: "form-label" %>
