--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -20,7 +20,7 @@
             <td>
               <%= link_to "View Profile", "#", class: "btn btn-sm btn-success" %>
               <% if current_user.not_friends_with?(friend.id) %>
-                <%= link_to 'Follow friend?', friendships_path, class: "btn btn-sm btn-success", method: :post %>
+                <%= link_to 'Follow friend?', friendships_path(friend: friend), class: "btn btn-sm btn-success", method: :post %>
               <% else %>
                 <span class="badge bg-secondary">You are friends</span>
               <% end %>
