--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -18,7 +18,7 @@
             <td><%= friend.full_name %></td>
             <td><%= friend.email %></td>
             <td>
-              <%= link_to "View Profile", "#", class: "btn btn-sm btn-success" %>
+              <%= link_to "View Profile", user_path(friend), class: "btn btn-sm btn-success" %>
               <% if current_user.not_friends_with?(friend.id) %>
                 <%= link_to 'Follow friend?', friendships_path(friend: friend), class: "btn btn-sm btn-success", method: :post %>
               <% else %>
