--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -18,21 +18,20 @@
           <td><%= @stock.ticker %></td>
           <td><%= @stock.name %></td>
           <td><%= @stock.last_price %></td>
-          <td>
-          <% if current_user.can_track_stock?(@stock.ticker) %>
-            <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
-                                            class: "btn btn-sm btn-success", method: :post %>
-          <% else %>
-            <span class="badge bg-primary">
-              You are already tracking
-              <% if !current_user.under_stock_limit? %>
-                10 stocks
+          <td><% if current_user.can_track_stock?(@stock.ticker) %>
+                <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
+                                    class: "btn btn-sm btn-success", method: :post %>
+              <% else %>
+                <span class="badge bg-primary">
+                  You are already tracking
+                  <% if !current_user.under_stock_limit? %>
+                    10 stocks
+                  <% end %>
+                  <% if current_user.stock_already_tracked?(@stock.ticker) %>
+                    this stock
+                  <% end %>
+                </span>
               <% end %>
-              <% if current_user.stock_already_tracked?(@stock.ticker) %>
-                this stock
-              <% end %>
-            </span>
-          <% end %>
           </td>
         </tr>
       </tbody>
